<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.registrationPage"
    android:layout_marginBottom="20dp">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/my_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="70dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/Banner"
                            android:textColor="@color/primary"
                            android:textSize="45sp">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/slogan"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:fontFamily="sans-serif-black">
                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="30dp"

                        android:orientation="vertical">



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif-black"
                            android:layout_gravity="center"
                            android:text="@string/Welcome_message"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold">

                        </TextView>

                        <EditText
                            android:id="@+id/fullNames"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/edit_text_border"
                            android:layout_marginTop="20dp"
                            android:paddingStart="12dp"
                            android:autofillHints=""
                            android:textColorHint="@color/primary"
                            android:ems="10"
                            android:hint="@string/enter_your_full_name"
                            android:inputType="text"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            tools:ignore="RtlSymmetry" />

                        <EditText
                            android:id="@+id/enter_email"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:autofillHints=""
                            android:background="@drawable/edit_text_border"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="text"
                            android:paddingStart="12dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/primary"
                            android:textSize="18sp"
                            tools:ignore="RtlSymmetry,TextFields" />

                        <LinearLayout
                            android:layout_width="300dp"
                            android:layout_height="55dp"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center"
                            android:background="@drawable/edit_text_border"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/enter_password"
                                android:layout_width="200dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="2dp"
                                android:layout_height="30dp"
                                android:background="@color/white"
                                android:textColor="@color/black"
                                android:paddingStart="12dp"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/password"
                                android:textColorHint="@color/primary"
                                android:textSize="18sp"
                                android:inputType="textPassword"
                                tools:ignore="RtlSymmetry,TextFields"  />

                            <ToggleButton
                                android:id="@+id/password_toggle_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="10dp"
                                android:layout_gravity="center"
                                android:background="@color/white"
                                android:backgroundTint="@color/white"
                                android:button="@drawable/eye" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="300dp"
                            android:layout_height="55dp"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center"
                            android:background="@drawable/edit_text_border"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/confirm_password"
                                android:layout_width="200dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="2dp"
                                android:layout_height="30dp"
                                android:background="@color/white"
                                android:textColor="@color/black"
                                android:paddingStart="12dp"
                                android:autofillHints=""
                                android:ems="10"
                                android:textColorHint="@color/primary"
                                android:hint="@string/confirm_password"
                                android:inputType="text"
                                android:textSize="18sp"
                                tools:ignore="RtlSymmetry,TextFields" />

                            <ToggleButton
                                android:id="@+id/password_toggle_button2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="10dp"
                                android:layout_gravity="center"
                                android:background="@color/white"
                                android:backgroundTint="@color/white"
                                android:button="@drawable/eye" />

                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="170dp"
                            android:layout_height="35dp"
                            android:id="@+id/create_account"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginVertical="12dp"
                            android:background="@drawable/round_btn"
                            android:gravity="center"
                            android:text="@string/create_account"
                            android:textColor="@color/white">
                        </androidx.appcompat.widget.AppCompatButton>
                        <ProgressBar
                            android:id="@+id/progressBar3"
                            style="?android:attr/progressBarStyleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:visibility="gone"
                            tools:ignore="MissingConstraints"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintVertical_bias="0.59"
                            />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="25dp"
                        android:layout_gravity="center_horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="@string/already_have_an_account"
                            android:textSize="16sp"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/Login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="@color/primary"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver"
                        android:id="@+id/driver"
                        android:textSize="2sp"
                        android:textColor="@color/white"
                        tools:ignore="SmallSp">
                    </TextView>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.drawerlayout.widget.DrawerLayout>






</LinearLayout>