<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.forgotPassword"
    android:layout_marginBottom="70dp">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/my_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="100dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/Banner"
                            android:textColor="@color/primary"
                            android:textSize="45sp">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/slogan"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:fontFamily="sans-serif-black">
                        </TextView>
                    </LinearLayout>
                    <EditText
                        android:id="@+id/email"
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:layout_gravity="center_horizontal"
                        android:ems="10"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:textSize="18sp"
                        app:layout_constraintTop_toBottomOf="@+id/bannerDescription"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:autofillHints="" />

                    <Button
                        android:id="@+id/resetPassword"
                        android:layout_width="210dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="24dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/round_btn"
                        android:text="@string/reset_password"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="@+id/banner"
                        app:layout_constraintHorizontal_bias="0.506"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email"
                        app:layout_constraintVertical_bias="0.0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="vertical">

                        <ProgressBar
                            android:id="@+id/progressBar"
                            style="?android:attr/progressBarStyleLarge"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:visibility="gone"
                            tools:ignore="MissingConstraints"
                            />
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.drawerlayout.widget.DrawerLayout>




</LinearLayout>